--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/scipts.js"></script>
+    <script src="js/scripts.js"></script>
     <title></title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="radio">
+        <label>
+          <input type="radio" name="animal" value="snake">
+          Snake
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="animal" value="bird">
+          Bird
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="animal" value="monkey">
+          Monkey
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="animal" value="whale">
+          Whale
+        </label>
+      </div>
+    </div>
   </body>
 </html>
