finish js functionality

--- a/index.html
+++ b/index.html
@@ -10,29 +10,54 @@
   </head>
   <body>
     <div class="container">
-      <div class="radio">
-        <label>
-          <input type="radio" name="animal" value="snake">
-          Snake
-        </label>
+      <form id="animal-form">
+        <div class="radio">
+          <label>
+            <input type="radio" name="animal" value="snake">
+            Snake
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="animal" value="bird">
+            Bird
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="animal" value="monkey">
+            Monkey
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="animal" value="whale">
+            Whale
+          </label>
+        </div>
+        <button type="submit" class="btn-success">Submit</button>
+      </form>
+    </div>
+    <div class="container">
+      <div id ="snake" class="hide">
+        <h2>Snakes</h2>
+        <a href=""><img src="img/snake.jpg" alt="snake"></a>
+        <p>Lorem ipsum dolor amet echo park portland gastropub cold-pressed cray wayfarers poutine. Try-hard portland tote bag whatever vegan. Irony tilde enamel pin, letterpress copper mug locavore ennui cloud bread trust fund fanny pack. Shabby chic hexagon iceland, cloud bread shaman freegan kogi sartorial.</p>
       </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="animal" value="bird">
-          Bird
-        </label>
+      <div id ="bird" class="hide">
+        <h2>Birds</h2>
+        <a href="#"><img src="img/bird.jpg" alt="bird"></a>
+        <p>Lorem ipsum dolor amet echo park portland gastropub cold-pressed cray wayfarers poutine. Try-hard portland tote bag whatever vegan. Irony tilde enamel pin, letterpress copper mug locavore ennui cloud bread trust fund fanny pack. Shabby chic hexagon iceland, cloud bread shaman freegan kogi sartorial.</p>
       </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="animal" value="monkey">
-          Monkey
-        </label>
+      <div id ="monkey" class="hide">
+        <h2>Monkeys</h2>
+        <a href="#"><img src="img/monkey.jpg" alt="monkey"></a>
+        <p>Lorem ipsum dolor amet echo park portland gastropub cold-pressed cray wayfarers poutine. Try-hard portland tote bag whatever vegan. Irony tilde enamel pin, letterpress copper mug locavore ennui cloud bread trust fund fanny pack. Shabby chic hexagon iceland, cloud bread shaman freegan kogi sartorial.</p>
       </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="animal" value="whale">
-          Whale
-        </label>
+      <div id ="whale" class="hide">
+        <h2>Whales</h2>
+        <a href="#"><img src="img/whale.jpg" alt="whale"></a>
+        <p>Lorem ipsum dolor amet echo park portland gastropub cold-pressed cray wayfarers poutine. Try-hard portland tote bag whatever vegan. Irony tilde enamel pin, letterpress copper mug locavore ennui cloud bread trust fund fanny pack. Shabby chic hexagon iceland, cloud bread shaman freegan kogi sartorial.</p>
       </div>
     </div>
   </body>
